--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/cli": "^2.2.1",
+    "@capacitor/core": "^2.2.1",
+    "@capacitor/ios": "^2.2.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
