--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && npx cap copy",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -12,7 +12,8 @@
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
