Got the page styled

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -7,6 +7,10 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "Keyboard": {
+      "resize": "none",
+      "style": "dark"
     }
   },
   "cordova": {}
