--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build && npx cap copy",
     "lint": "vue-cli-service lint",
     "build-sass": "node-sass --omit-source-map-url src/styles/styles.scss src/styles/styles.css",
-    "watch-sass": "npm run build-sass -- --watch"
+    "watch-sass": "npm run build-sass -- --watch",
+    "serve-ios": "npm run build && npx cap open ios"
   },
   "dependencies": {
     "@capacitor/cli": "^2.2.1",
