--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
