--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "build-sass": "node-sass --omit-source-map-url src/styles/styles.scss src/styles/styles.css",
     "watch-sass": "npm run build-sass -- --watch",
-    "serve-ios": "npm run build && npx cap open ios"
+    "serve-ios": "npm run build && npx cap open ios",
+    "resources": "cordova-res ios && cordova-res android && node scripts/resources.js"
   },
   "dependencies": {
     "@capacitor/cli": "^2.2.1",
@@ -28,6 +29,7 @@
     "@vue/cli-service": "^4.4.0",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.0",
+    "cordova-res": "^0.15.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
