--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "@tensorflow/tfjs": "^2.0.1",
     "aos": "^3.0.0-beta.6",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^3.6.5",
