--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^3.0.0-beta.6",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^3.6.5",
+    "lz-string": "^1.4.4",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
