--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@capacitor/ios": "^2.2.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@tensorflow/tfjs": "^2.0.1",
+    "@tensorflow/tfjs-node": "^2.0.1",
     "aos": "^3.0.0-beta.6",
+    "aws-sdk": "^2.717.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^3.6.5",
+    "fs": "0.0.1-security",
     "lz-string": "^1.4.4",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
