--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "resources": "cordova-res ios && cordova-res android && node scripts/resources.js"
   },
   "dependencies": {
-    "@capacitor/cli": "^2.2.1",
+    "@capacitor/cli": "^2.4.5",
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "@tensorflow/tfjs": "^2.8.1",
     "aos": "^3.0.0-beta.6",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^3.6.5",
